--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/team401/Copper-Console#readme",
   "dependencies": {
+    "@msgpack/msgpack": "^3.0.0-beta2",
     "electron-squirrel-startup": "^1.0.0",
     "wpilib-nt-client": "^1.7.2"
   },
