--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "dependencies": {
     "@msgpack/msgpack": "^3.0.0-beta2",
     "electron-squirrel-startup": "^1.0.0",
-    "wpilib-nt-client": "^1.7.2"
+    "node-wpilib-ws": "^0.0.5",
+    "wpilib-nt-client": "^1.7.2",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.2.0",
@@ -33,6 +35,7 @@
     "@electron-forge/maker-squirrel": "^7.2.0",
     "@electron-forge/maker-zip": "^7.2.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
+    "@types/ws": "^8.5.10",
     "electron": "28.1.3",
     "typescript": "^5.3.3"
   }
