--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "productName": "Copper Console",
   "version": "0.1.0",
   "description": "Enhanced field vision for drivers",
-  "main": "app/main.js",
+  "main": ".vite/build/main.js",
   "scripts": {
-    "build": "npx tsc",
-    "start": "npm run build && electron-forge start",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "package": "npm run build && electron-forge package",
-    "make": "npm run build && electron-forge make"
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "lint": "eslint --ext .ts,.tsx ."
   },
   "repository": {
     "type": "git",
@@ -25,6 +24,7 @@
     "@msgpack/msgpack": "^3.0.0-beta2",
     "electron-squirrel-startup": "^1.0.0",
     "node-wpilib-ws": "^0.0.5",
+    "vite": "^5.0.12",
     "wpilib-nt-client": "^1.7.2",
     "ws": "^8.16.0"
   },
@@ -35,8 +35,13 @@
     "@electron-forge/maker-squirrel": "^7.2.0",
     "@electron-forge/maker-zip": "^7.2.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
+    "@electron-forge/plugin-vite": "^7.2.0",
     "@types/ws": "^8.5.10",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
     "electron": "28.1.3",
+    "eslint": "^8.56.0",
+    "eslint-plugin-import": "^2.29.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
