--- a/package.json
+++ b/package.json
@@ -23,10 +23,7 @@
   "dependencies": {
     "@msgpack/msgpack": "^3.0.0-beta2",
     "electron-squirrel-startup": "^1.0.0",
-    "node-wpilib-ws": "^0.0.5",
-    "vite": "^5.0.12",
-    "wpilib-nt-client": "^1.7.2",
-    "ws": "^8.16.0"
+    "vite": "^5.0.12"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.2.0",
