--- a/package.json
+++ b/package.json
@@ -1,44 +1,39 @@
 {
-  "name": "copper-console",
-  "productName": "Copper Console",
-  "version": "0.1.0",
-  "description": "Enhanced field vision for drivers",
-  "main": ".vite/build/main.js",
-  "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "lint": "eslint --ext .ts,.tsx ."
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/team401/Copper-Console.git"
-  },
-  "author": "team401",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/team401/Copper-Console/issues"
-  },
-  "homepage": "https://github.com/team401/Copper-Console#readme",
+  "name": "snakescreen",
+  "version": "0.0.1",
+  "private": true,
   "dependencies": {
-    "@msgpack/msgpack": "^3.0.0-beta2",
-    "electron-squirrel-startup": "^1.0.0",
-    "vite": "^5.0.12"
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.0",
+    "@fontsource/roboto": "^5.1.1",
+    "@frc-web-components/react": "^2.1.0",
+    "@mui/material": "6.4.1",
+    "@types/estree": "^1.0.6",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-scripts": "5.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "@electron-forge/cli": "^7.2.0",
-    "@electron-forge/maker-deb": "^7.2.0",
-    "@electron-forge/maker-rpm": "^7.2.0",
-    "@electron-forge/maker-squirrel": "^7.2.0",
-    "@electron-forge/maker-zip": "^7.2.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
-    "@electron-forge/plugin-vite": "^7.2.0",
-    "@types/ws": "^8.5.10",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "electron": "28.1.3",
-    "eslint": "^8.56.0",
-    "eslint-plugin-import": "^2.29.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "react-scripts": "latest"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
