--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "snakescreen",
   "version": "0.0.1",
   "private": true,
+  "main": "electron-main.js",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -20,9 +21,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron": "electron ."
   },
   "devDependencies": {
+    "electron": "^34.3.0",
     "react-scripts": "latest"
   },
   "browserslist": {
