--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.1.1",
+    "@frc-web-components/fwc": "^3.2.0",
     "@frc-web-components/react": "^2.1.0",
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.1",
@@ -17,7 +18,8 @@
     "@types/react-dom": "19.0.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "typescript": "^5.8.2"
   },
   "scripts": {
     "start": "electron-forge start",
