--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "resolveJsonModule": true,
     "sourceMap": true
   },
-  "include": ["src", "electron"],
+  "include": ["src", "electron", "public/main.ts"],
   "exclude": ["node_modules", "dist"]
 }
