--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,17 +4,20 @@ on:
   push:
     branches:
       - main  # Runs only when changes are merged into main
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: windows-latest  # Electron-builder requires Windows for .exe builds
 
+
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 23
 
@@ -34,7 +37,7 @@ jobs:
           if not exist .\dist\SnakeScreen-Setup.exe exit 1 
 
       - name:  Upload executable as an artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: SnakeScreen-Setup
           path: output/SnakeScreen-Setup.exe
@@ -49,13 +52,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Download built executable
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: SnakeScreen-Setup
           path: output/
 
       - name:  Create GitHub Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: v1.0.${{ github.run_number }}
           files: output/SnakeScreen-Setup.exe
