--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,8 @@ jobs:
       - name:  Move executable to releases folder
         run: |
           mkdir output
-          if exist .\dist\SnakeScreen-Setup.exe move .\dist\SnakeScreen-Setup.exe output\SnakeScreen-Setup.exe
-          if not exist .\dist\SnakeScreen-Setup.exe exit 1 
+          if (exist .\dist\SnakeScreen-Setup.exe) move .\dist\SnakeScreen-Setup.exe output\SnakeScreen-Setup.exe
+          if (not exist .\dist\SnakeScreen-Setup.exe) exit 1 
 
       - name:  Upload executable as an artifact
         uses: actions/upload-artifact@v4
@@ -66,4 +66,4 @@ jobs:
           tag_name: v1.0.${{ github.run_number }}
           files: output/SnakeScreen-Setup.exe
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN}}
