--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,6 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           tag_name: v1.0.${{ github.run_number }}
-          files: output/SnakeScreen-Setup.exe
+          files: dist/SnakeScreen-Setup.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN}}
