Changes to main.yml (Not done yet)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,11 +53,23 @@ jobs:
         with:
           name: SnakeScreen-Setup
           path: dist/
+      
+      - name: Get Version
+        id: getVersion
+        shell: bash
+        run: |
+          content=`cat ./package.json`
+          # the following lines are required for multiline json
+          content="$(content//'%'/'%25')"
+          content="$(content//$'\n'/'%0A')"
+          content="$(content//$'\r'/'%0D')"
+          #
+          echo "::set-output name=packageJson::$content"
 
       - name:  Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: v1.0.${{ github.run_number }}
+          tag_name: v1.0.${{ fromJson(steps.getVersion.outputs.packageJson).version}}
           files: dist/SnakeScreen-Setup.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN}}
