--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,7 @@ jobs:
       - name:  Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ steps.info.outputs.version }}
+          tag_name: v${{ steps.info.outputs.version }}
           # files: dist/SnakeScreen-Setup.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN}}
