maybe this works

--- a/package.json
+++ b/package.json
@@ -57,6 +57,12 @@
     "files": [
       "build/**/*"
     ],
+    "publish": [
+      {
+        "provider": "github",
+        "releaseType": "release"
+      }
+    ],
     "mac": {
       "category": "public.app-category.utilities"
     },
