--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,29 +41,29 @@ jobs:
       #     name: SnakeScreen-Setup
       #     path: dist/SnakeScreen-Setup.exe
 
-  release:
-    needs: build  
-    runs-on: windows-latest
-    # if: github.ref == 'refs/heads/main'
+  # release:
+  #   needs: build  
+  #   runs-on: windows-latest
+  #   # if: github.ref == 'refs/heads/main'
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
 
-      # - name: Download built executable
-      #   uses: actions/download-artifact@v4
-      #   with:
-      #     name: SnakeScreen-Setup
-      #     path: dist/
+  #     # - name: Download built executable
+  #     #   uses: actions/download-artifact@v4
+  #     #   with:
+  #     #     name: SnakeScreen-Setup
+  #     #     path: dist/
       
-      - name: package.json info
-        id: info
-        uses: jaywcjlove/github-action-package@main
+  #     - name: package.json info
+  #       id: info
+  #       uses: jaywcjlove/github-action-package@main
 
-      - name:  Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: v${{ steps.info.outputs.version }}
-          # files: dist/SnakeScreen-Setup.exe
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN}}
+  #     - name:  Create GitHub Release
+  #       uses: softprops/action-gh-release@v2
+  #       with:
+  #         tag_name: v${{ steps.info.outputs.version }}
+  #         # files: dist/SnakeScreen-Setup.exe
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GH_TOKEN}}
