--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Publish Release
 
 env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
@@ -34,6 +34,11 @@ jobs:
         env:
             GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         run: npm run publish
+
+
+
+# Keeping incase we want to use seperate jobs
+
 
       # - name:  Upload executable as an artifact
       #   uses: actions/upload-artifact@v4
