--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Publish Release
+name: CI
 
 env:
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
@@ -13,60 +13,51 @@ jobs:
   build:
     runs-on: windows-latest  # Electron-builder requires Windows for .exe builds
 
+
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js 
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 23
 
-      - name:  Install dependencies 
+      - name:  Install dependencies
         run: npm install --force
 
-      - name: Build Snakescreen               #Builds react app
+      - name: Build Snakescreen
         run: npm run build 
 
-      - name: Build Electron App and publish  #Builds the electron app then publishes to github releases
+      - name: Build Electron App
+        run: npm run electron:build  
+
+      - name:  Upload executable as an artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: SnakeScreen-Setup
+          path: dist/SnakeScreen-Setup.exe
+
+  release:
+    needs: build  
+    runs-on: windows-latest
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Download built executable
+        uses: actions/download-artifact@v4
+        with:
+          name: SnakeScreen-Setup
+          path: dist/
+
+      - name:  Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: v1.0.${{ github.run_number }}
+          files: dist/SnakeScreen-Setup.exe
         env:
-            GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: npm run publish
-
-
-
-# Keeping incase we want to use seperate jobs
-
-
-  #     - name:  Upload executable as an artifact
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: SnakeScreen-Setup
-  #         path: dist/SnakeScreen-Setup.exe
-  #
-  # release:
-  #   needs: build  
-  #   runs-on: windows-latest
-  #   # if: github.ref == 'refs/heads/main'
-  #
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
-  #
-  #     - name: Download built executable
-  #       uses: actions/download-artifact@v4
-  #       with:
-  #         name: SnakeScreen-Setup
-  #         path: dist/
-  #   
-  #     - name: package.json info
-  #       id: info
-  #       uses: jaywcjlove/github-action-package@main
-  #
-  #     - name:  Create GitHub Release
-  #       uses: softprops/action-gh-release@v2
-  #       with:
-  #         tag_name: v${{ steps.info.outputs.version }}
-  #         # files: dist/SnakeScreen-Setup.exe
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GH_TOKEN}}
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN}}
